[Feature]: Implemented Multiple Tabs Functionality